--- a/style.css
+++ b/style.css
@@ -22,22 +22,29 @@ body {
 	background-color: var(--Slate-300);
 }
 
+main{
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+}
+
 .card {
-	width: 450px;
-	height: 550px;
+	width: 50%;
+	height: fit-content;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 5px;
 	background-color: var(--White);
 	border-radius: 10px;
+	padding: 10px;
 	box-shadow: 7px 7px 10px 1px #6f6f6f;
 }
 
 .card img {
-	width: 80%;
-	height: 80%;
+	width: 90%;
+	height: 90%;
 	border-radius: 10px;
     margin-top: 5px;
 }
@@ -45,8 +52,8 @@ body {
 .card > .header {
 	color: black !important;
 	font-weight: 700 !important;
-	font-size: 25px !important;
-	width: 70%;
+	font-size: 20px !important;
+	width: 100%;
 	margin: 10px;
 }
 
@@ -55,13 +62,13 @@ body {
 	text-align: center;
 	color: var(--Slate-500);
 	font-size: 15px;
-	width: 65%;
+	width: 95%;
     margin-top: 10px;
 }
 .card > .attribution {
 	margin-top: 10px;
 	text-align: center;
-	width: 60%;
+	width: 80%;
 }
 .card > .attribution > a {
 	text-decoration: none;
